plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // --- Spring Boot starters ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // --- Database ---
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.3'

    // --- MapStruct ---
    implementation 'org.mapstruct:mapstruct:1.6.3'

    // --- Lombok ---
    compileOnly 'org.projectlombok:lombok'

    // --- Annotation Processors (ORDER MATTERS!) ---
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'  // CRITICAL ADDITION
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // --- Hibernate bytecode (CRITICAL FIX) ---
    implementation 'net.bytebuddy:byte-buddy:1.14.12'

    // --- JWT ---
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'

    // --- Swagger / OpenAPI ---
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'

    // --- Utilities ---
    implementation 'org.passay:passay:1.5.0'
    implementation 'com.google.guava:guava:32.1.2-jre'

    // --- Thymeleaf + Spring Security 6 (IMPORTANT) ---
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'

    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'

    // --- Tests ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

// Remove the tasks.withType(JavaCompile) block - it's causing issues
// Use this instead:
compileJava {
    options.compilerArgs += [
            '-Amapstruct.defaultComponentModel=spring',
            '-Amapstruct.suppressGeneratorTimestamp=true'
    ]
}

configurations.configureEach {
    resolutionStrategy {
        force 'net.bytebuddy:byte-buddy:1.14.12'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}